force-app/main/default/objects/Brand_Experience_Variation__c/Brand_Experience_Variation__c.object-meta.xml
<CustomObject>
    <description>Object to create variations of Brand Experiences (Digital Events, Physical Events, Content, Exclusive Offers, ...)
Child object of Experience (Brand_Experience__c). Parent object of Experience Variation Member (Brand_Experience_Variation_Member__c).</description>
    <label>Event &amp; Experience Activation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event &amp; Experience Activations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>