force-app/main/default/objects/Brand_Experience_Variation__c/fields/AttendanceByCA__c.field-meta.xml
<CustomField>
    <fullName>AttendanceByCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance by CA</label>
    <type>Checkbox</type>
</CustomField>