force-app/main/default/objects/Brand_Experience_Variation__c/fields/Brand_Experience__c.field-meta.xml
<CustomField>
    <fullName>Brand_Experience__c</fullName>
    <description>Experience associated with the Experience Variation</description>
    <label>Event &amp; Experience</label>
    <referenceTo>Brand_Experience__c</referenceTo>
    <relationshipLabel>Event &amp; Experience Activations</relationshipLabel>
    <relationshipName>Brand_Experience_Variations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>