force-app/main/default/objects/Brand_Experience_Variation__c/fields/ClientRegistrationDateLimit__c.field-meta.xml
<CustomField>
    <fullName>ClientRegistrationDateLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Registration within a Time Range ?</label>
    <type>Checkbox</type>
</CustomField>