force-app/main/default/objects/Brand_Experience_Variation__c/fields/ClientSelection__c.field-meta.xml
<CustomField>
    <fullName>ClientSelection__c</fullName>
    <description>Selection method for Experience Variation in case of limited capacity</description>
    <label>Client Selection</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequiredClientRegistration__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Selection</fullName>
                <default>true</default>
                <label>No Selection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>