force-app/main/default/objects/Brand_Experience_Variation__c/fields/ContentUrl__c.field-meta.xml
<CustomField>
    <fullName>ContentUrl__c</fullName>
    <description>Content Url</description>
    <label>URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>