force-app/main/default/objects/Brand_Experience_Variation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Quick Description of the varation who will be displayed on desktop and mobile</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>