force-app/main/default/objects/Brand_Experience_Variation__c/fields/DigitalEventTech__c.field-meta.xml
<CustomField>
    <fullName>DigitalEventTech__c</fullName>
    <description>Visible IF subType = Digital
Possible choice : Zoom</description>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>