force-app/main/default/objects/Brand_Experience_Variation__c/fields/DigitalEventTechPassword__c.field-meta.xml
<CustomField>
    <fullName>DigitalEventTechPassword__c</fullName>
    <description>Global password used to connect to Digital Events solution used to hold Digital

Visible IF subType = Digital</description>
    <label>Event Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>