force-app/main/default/objects/Brand_Experience_Variation__c/fields/DigitalEventTechReference__c.field-meta.xml
<CustomField>
    <fullName>DigitalEventTechReference__c</fullName>
    <description>Reference generated by Digital Event solution</description>
    <label>Event External Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>