force-app/main/default/objects/Brand_Experience_Variation__c/fields/EligibleAfricaMiddleEastCountries__c.field-meta.xml
<CustomField>
    <fullName>EligibleAfricaMiddleEastCountries__c</fullName>
    <inlineHelpText>Client is eligible to Experience Variation when his Residency Country is selected</inlineHelpText>
    <label>Residency Country: Africa Middle-East</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>TargetingMethod__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>AfricaMiddleEastCountries</valueSetName>
    </valueSet>
</CustomField>