force-app/main/default/objects/Brand_Experience_Variation__c/fields/EligibleClubMemberStatus__c.field-meta.xml
<CustomField>
    <fullName>EligibleClubMemberStatus__c</fullName>
    <description>List of all the Club Status eligible for the Experience Variation</description>
    <inlineHelpText>Client is eligible to Experience Variation when his Club status is selected</inlineHelpText>
    <label>Club Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>TargetingMethod__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ClubStatusList</valueSetName>
    </valueSet>
</CustomField>