force-app/main/default/objects/Brand_Experience_Variation__c/fields/EligibleEuropeCountries__c.field-meta.xml
<CustomField>
    <fullName>EligibleEuropeCountries__c</fullName>
    <inlineHelpText>Client is eligible to Experience Variation when his Residency Country is selected</inlineHelpText>
    <label>Residency Country: Europe</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>TargetingMethod__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>EuropeCountries</valueSetName>
    </valueSet>
</CustomField>