force-app/main/default/objects/Brand_Experience_Variation__c/fields/EligibleUnlockedBadge__c.field-meta.xml
<CustomField>
    <fullName>EligibleUnlockedBadge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>List of all Club Badges to be unlocked to be eligible for the Experience Variation</description>
    <inlineHelpText>Client is eligible to Experience Variation when the badge selected and unlocked</inlineHelpText>
    <label>Unlocked Club Badge</label>
    <referenceTo>Badge_Catalog__c</referenceTo>
    <relationshipName>Brand_Experience_Variations</relationshipName>
    <type>Lookup</type>
</CustomField>