force-app/main/default/objects/Brand_Experience_Variation__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <description>Date &amp; Time at which Brand Experience Variation ends (GMT+02)</description>
    <label>End Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>