force-app/main/default/objects/Brand_Experience_Variation__c/fields/Guests_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Guests_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guests Authorized</label>
    <type>Checkbox</type>
</CustomField>