force-app/main/default/objects/Brand_Experience_Variation__c/fields/Incrementor__c.field-meta.xml
<CustomField>
    <fullName>Incrementor__c</fullName>
    <description>An incrementor that only uses for that displayed in the Reference  formula field</description>
    <displayFormat>{000000}</displayFormat>
    <label>Incrementor</label>
    <type>AutoNumber</type>
</CustomField>