force-app/main/default/objects/Brand_Experience_Variation__c/fields/inStoreEventFormat__c.field-meta.xml
<CustomField>
    <fullName>inStoreEventFormat__c</fullName>
    <label>In Store Event Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brunch</fullName>
            </value>
            <value>
                <fullName>Cocktail</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Elevated OTO</fullName>
            </value>
            <value>
                <fullName>Informal modelling</fullName>
            </value>
            <value>
                <fullName>Open door</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Runaway in store</fullName>
            </value>
            <value>
                <fullName>Show animation</fullName>
            </value>
            <value>
                <fullName>Styling session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>