force-app/main/default/objects/Brand_Experience_Variation__c/fields/IsReady__c.field-meta.xml
<CustomField>
    <fullName>IsReady__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered the status from &apos;Draft&apos; to &apos;Ready&apos;</description>
    <inlineHelpText>Set the field to TRUE to change Variation status from &quot;Draft&quot; to &quot;Ready&quot;. 
Variation and member flow starts.</inlineHelpText>
    <label>Ready for Publication ?</label>
    <type>Checkbox</type>
</CustomField>