force-app/main/default/objects/Brand_Experience_Variation__c/fields/Nb_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Nb_Appointment__c</fullName>
    <label>Appointments</label>
    <summarizedField>Brand_Experience_Variation_Member__c.Nb_Appointment__c</summarizedField>
    <summaryForeignKey>Brand_Experience_Variation_Member__c.Brand_Experience_Variation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>