force-app/main/default/objects/Brand_Experience_Variation__c/fields/Nb_Confirmed_Clients__c.field-meta.xml
<CustomField>
    <fullName>Nb_Confirmed_Clients__c</fullName>
    <description>Number of Child Brand_Experience_Variation_Member__c records with rsvpState__c = &apos;Registered&apos;</description>
    <label>Clients Confirmed Number</label>
    <summaryFilterItems>
        <field>Brand_Experience_Variation_Member__c.rsvpState__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>Brand_Experience_Variation_Member__c.Brand_Experience_Variation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>