force-app/main/default/objects/Brand_Experience_Variation__c/fields/Nb_Eligible_Clients__c.field-meta.xml
<CustomField>
    <fullName>Nb_Eligible_Clients__c</fullName>
    <description>Number of Child Brand_Experience_Variation_Member__c records</description>
    <label>Eligible Clients</label>
    <summaryForeignKey>Brand_Experience_Variation_Member__c.Brand_Experience_Variation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>