force-app/main/default/objects/Brand_Experience_Variation__c/fields/Nb_Participated_Clients__c.field-meta.xml
<CustomField>
    <fullName>Nb_Participated_Clients__c</fullName>
    <label>Clients Participated Number</label>
    <summaryFilterItems>
        <field>Brand_Experience_Variation_Member__c.Attendance__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Brand_Experience_Variation_Member__c.Brand_Experience_Variation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>