force-app/main/default/objects/Brand_Experience_Variation__c/fields/Nb_Participations__c.field-meta.xml
<CustomField>
    <fullName>Nb_Participations__c</fullName>
    <description>Number of Child Brand_Experience_Variation_Member__c records with participationStartDateTime != NULL</description>
    <label>Participations</label>
    <summaryFilterItems>
        <field>Brand_Experience_Variation_Member__c.IsParticipated__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Brand_Experience_Variation_Member__c.Brand_Experience_Variation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>