force-app/main/default/objects/Brand_Experience_Variation__c/fields/Nb_Target_Clients__c.field-meta.xml
<CustomField>
    <fullName>Nb_Target_Clients__c</fullName>
    <label>Clients Target Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>