force-app/main/default/objects/Brand_Experience_Variation__c/fields/Nomination_by_CA__c.field-meta.xml
<CustomField>
    <fullName>Nomination_by_CA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nomination by CA</label>
    <type>Checkbox</type>
</CustomField>