force-app/main/default/objects/Brand_Experience_Variation__c/fields/OfferCode__c.field-meta.xml
<CustomField>
    <fullName>OfferCode__c</fullName>
    <description>Offer Code, Visible IF type = Exclusive Offer</description>
    <label>Offer Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>