force-app/main/default/objects/Brand_Experience_Variation__c/fields/OfferTypology__c.field-meta.xml
<CustomField>
    <fullName>OfferTypology__c</fullName>
    <description>OfferTypology
Visible IF type = Exclusive Offer</description>
    <label>Offer Typology</label>
    <length>100</length>
    <type>Text</type>
</CustomField>