force-app/main/default/objects/Brand_Experience_Variation__c/fields/PreviewDateTime__c.field-meta.xml
<CustomField>
    <fullName>PreviewDateTime__c</fullName>
    <description>Date &amp; Time at which Experience Variation is made visible on Client Front (GMT+02)
previewDateTime =&lt; startDateTime</description>
    <inlineHelpText>Optional : Variation status changes from &quot;Ready&quot; to &quot;Preview&quot; at Preview Date &amp; Time</inlineHelpText>
    <label>Client Preview Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>