force-app/main/default/objects/Brand_Experience_Variation__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Functional Reference for the Experience Variation

[BrandExperience__c.reference__c]-[base number+1]
Minimum base number = 000001
6 chiffres (ex. EXP000001-000001)</description>
    <label>Variation Reference</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>