force-app/main/default/objects/Brand_Experience_Variation__c/fields/Registration_by_CA__c.field-meta.xml
<CustomField>
    <fullName>Registration_by_CA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Registration by CA</label>
    <type>Checkbox</type>
</CustomField>