force-app/main/default/objects/Brand_Experience_Variation__c/fields/RegistrationEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>RegistrationEndDateTime__c</fullName>
    <description>Date &amp; Time at which Brand Experience Variation client registration ends (GMT+02)</description>
    <inlineHelpText>Variation status changes to &quot;Registration Closed&quot; at Registration End Date &amp; Time</inlineHelpText>
    <label>Registration End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>