force-app/main/default/objects/Brand_Experience_Variation__c/fields/RegistrationStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>RegistrationStartDateTime__c</fullName>
    <description>Date &amp; Time at which Experience Variation client registration starts (GMT+02)</description>
    <inlineHelpText>Variation status changes to &quot;Registration Opened&quot; at Registration Start Date &amp; Time</inlineHelpText>
    <label>Registration Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>