force-app/main/default/objects/Brand_Experience_Variation__c/fields/RelatedMembers__c.field-meta.xml
<CustomField>
    <fullName>RelatedMembers__c</fullName>
    <label>RelatedMembers</label>
    <summaryForeignKey>Brand_Experience_Variation_Member__c.Brand_Experience_Variation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>