force-app/main/default/objects/Brand_Experience_Variation__c/fields/Required_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Required_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment</label>
    <type>Checkbox</type>
</CustomField>