force-app/main/default/objects/Brand_Experience_Variation__c/fields/RequiredCaNotification__c.field-meta.xml
<CustomField>
    <fullName>RequiredCaNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CA attached to the Client will be notified during the Brand Experience Variation lifecycle. Optional step.</description>
    <label>Notification to Client Advisors ?</label>
    <type>Checkbox</type>
</CustomField>