force-app/main/default/objects/Brand_Experience_Variation__c/fields/RequiredClientRegistration__c.field-meta.xml
<CustomField>
    <fullName>RequiredClientRegistration__c</fullName>
    <description>The client will be required to register before accessing the Brand Experience Variation.</description>
    <inlineHelpText>Eligible clients will be requested to register between Registration Start Date &amp; Time and Registration End Date &amp; Time</inlineHelpText>
    <label>Client Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Registration</fullName>
                <default>true</default>
                <label>No Registration</label>
            </value>
            <value>
                <fullName>Mandatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>