force-app/main/default/objects/Brand_Experience_Variation__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <description>Date &amp; Time at which Experience Variation starts</description>
    <inlineHelpText>Variation status changes to &quot;Participation Opened&quot; at Start Date &amp; Time</inlineHelpText>
    <label>Start Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>