force-app/main/default/objects/Brand_Experience_Variation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of an Brand Experience Variation</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Ready</fullName>
                <label>Published</label>
            </value>
            <value>
                <fullName>Preview</fullName>
                <label>Member Preview</label>
            </value>
            <value>
                <fullName>Registration Opened</fullName>
            </value>
            <value>
                <fullName>Registration Closed</fullName>
            </value>
            <value>
                <fullName>Selection Opened</fullName>
            </value>
            <value>
                <fullName>Selection Closed</fullName>
            </value>
            <value>
                <fullName>Participation Opened</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>