force-app/main/default/objects/Brand_Experience_Variation__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipName>Experience_Variations</relationshipName>
    <type>Lookup</type>
</CustomField>