force-app/main/default/objects/Brand_Experience_Variation__c/fields/Target_Sales__c.field-meta.xml
<CustomField>
    <fullName>Target_Sales__c</fullName>
    <label>Target Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>