force-app/main/default/objects/Brand_Experience_Variation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of an Brand Experience Variation</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Exclusive Offer</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>