force-app/main/default/objects/Brand_Experience_Variation__c/recordTypes/Content.recordType-meta.xml
<RecordType>
    <fullName>Content</fullName>
    <active>true</active>
    <description>for Exclusive Content</description>
    <label>Content</label>
</RecordType>