force-app/main/default/objects/Brand_Experience_Variation__c/recordTypes/Digital_Event_Variation.recordType-meta.xml
<RecordType>
    <fullName>Digital_Event_Variation</fullName>
    <active>true</active>
    <description>for Digital Events</description>
    <label>Digital Event</label>
</RecordType>