force-app/main/default/objects/Brand_Experience_Variation__c/recordTypes/Exclusive_Offer.recordType-meta.xml
<RecordType>
    <fullName>Exclusive_Offer</fullName>
    <active>true</active>
    <description>for Exclusive Offers</description>
    <label>Exclusive Offer</label>
</RecordType>