force-app/main/default/objects/Brand_Experience_Variation__c/recordTypes/Physical_Event.recordType-meta.xml
<RecordType>
    <fullName>Physical_Event</fullName>
    <active>true</active>
    <description>for Physical Events</description>
    <label>In Store Event</label>
</RecordType>