force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/ContentUrlVisibility.validationRule-meta.xml
<ValidationRule>
    <fullName>ContentUrlVisibility</fullName>
    <active>true</active>
    <description>Visible IF type = Content</description>
    <errorConditionFormula>Brand_Experience__r.RecordType.DeveloperName = &apos;Club_Experience&apos; &amp;&amp;
RecordType.Name != &apos;Content&apos; &amp;&amp; ContentUrl__c != Null</errorConditionFormula>
    <errorDisplayField>ContentUrl__c</errorDisplayField>
    <errorMessage>ContentUrl cannot be set when the RecordType is not Content</errorMessage>
</ValidationRule>