force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/digitalEventTechPasswordValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>digitalEventTechPasswordValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Brand_Experience__r.RecordType.DeveloperName = &apos;Club_Experience&apos; &amp;&amp;
RecordType.Name != &apos;Digital Event&apos; &amp;&amp;  DigitalEventTechPassword__c != null</errorConditionFormula>
    <errorDisplayField>DigitalEventTechPassword__c</errorDisplayField>
    <errorMessage>digitalEventTechPassword cannot be set when recordType IS NOT “Digital Event”</errorMessage>
</ValidationRule>