force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/digitalEventTechReferenceValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>digitalEventTechReferenceValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Brand_Experience__r.RecordType.DeveloperName = &apos;Club_Experience&apos; &amp;&amp;
RecordType.Name != &apos;Digital Event&apos; &amp;&amp;  DigitalEventTechReference__c != null</errorConditionFormula>
    <errorDisplayField>DigitalEventTechReference__c</errorDisplayField>
    <errorMessage>digitalEventTechReference cannot be set when recordType IS NOT “Digital Event”</errorMessage>
</ValidationRule>