force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/EligibleClientCountryValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>EligibleClientCountryValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Brand_Experience__r.RecordType.Name != &apos;Club Experience&apos; &amp;&amp; 
NOT (
ISBLANK(EligibleAfricaMiddleEastCountries__c) &amp;&amp;
ISBLANK(EligibleAmericasCountries__c) &amp;&amp;
ISBLANK(EligibleEuropeCountries__c) &amp;&amp;
ISBLANK(EligibleAsiaPacificCountries__c)
)</errorConditionFormula>
    <errorMessage>Eligible Countries fields cannot be set when Brand Experience recordType is not “Club Experience”</errorMessage>
</ValidationRule>