force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/EligibleClubMemberStatusValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>EligibleClubMemberStatusValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT ISBLANK(EligibleClubMemberStatus__c) &amp;&amp; Brand_Experience__r.RecordType.Name != &apos;Club Experience&apos;</errorConditionFormula>
    <errorDisplayField>EligibleClubMemberStatus__c</errorDisplayField>
    <errorMessage>EligibleClubMemberStatus cannot be set when Brand_Experience__c.recordType IS NOT “Club Experience”</errorMessage>
</ValidationRule>