force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/Event_Variation_Range_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Variation_Range_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Brand_Experience__r.RecordType.DeveloperName == &apos;Experience&apos; 
&amp;&amp;
(
    StartDateTime__c &lt;  Brand_Experience__r.Experience_StartDate__c  
    || 
    EndDateTime__c &gt; Brand_Experience__r.Experience_EndDate__c 
)</errorConditionFormula>
    <errorMessage>Selected date is not in the range of dates of the event</errorMessage>
</ValidationRule>