force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/isEligibleUnlockedBadgeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>isEligibleUnlockedBadgeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>EligibleUnlockedBadge__c != null &amp;&amp; Brand_Experience__r.RecordType.Name != &apos;Club Experience&apos;</errorConditionFormula>
    <errorDisplayField>EligibleUnlockedBadge__c</errorDisplayField>
    <errorMessage>isEligibleUnlockedBadge cannot be set when Brand_Experience__c.recordType IS NOT “Club Experience”</errorMessage>
</ValidationRule>