force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/OfferCodeVisibility.validationRule-meta.xml
<ValidationRule>
    <fullName>OfferCodeVisibility</fullName>
    <active>true</active>
    <description>Visible IF type = Exclusive Offer</description>
    <errorConditionFormula>RecordType.Name != &apos;Exclusive Offer&apos; &amp;&amp; OfferCode__c != Null</errorConditionFormula>
    <errorDisplayField>OfferCode__c</errorDisplayField>
    <errorMessage>Offer code cannot be set when RecordType is not Exclusive Offer</errorMessage>
</ValidationRule>