force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/OfferTypologyVisibility.validationRule-meta.xml
<ValidationRule>
    <fullName>OfferTypologyVisibility</fullName>
    <active>true</active>
    <description>Visible IF type = Exclusive Offer</description>
    <errorConditionFormula>RecordType.Name != &apos;Exclusive Offer&apos;  &amp;&amp; OfferTypology__c != null</errorConditionFormula>
    <errorDisplayField>OfferTypology__c</errorDisplayField>
    <errorMessage>Offer typology cannot be set when the RecordType is not Exclusive Offer</errorMessage>
</ValidationRule>