force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/PreviewDateTimeBeforeRegistrationDates.validationRule-meta.xml
<ValidationRule>
    <fullName>PreviewDateTimeBeforeRegistrationDates</fullName>
    <active>true</active>
    <errorConditionFormula>NOT ISNULL(PreviewDateTime__c) &amp;&amp; (
RegistrationStartDateTime__c &lt; PreviewDateTime__c  ||
RegistrationEndDateTime__c &lt; PreviewDateTime__c
)</errorConditionFormula>
    <errorDisplayField>PreviewDateTime__c</errorDisplayField>
    <errorMessage>Registration dates must be set AFTER Preview date. Please modify Registration dates or Preview date.</errorMessage>
</ValidationRule>