force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/PreviewDateTimeValidity.validationRule-meta.xml
<ValidationRule>
    <fullName>PreviewDateTimeValidity</fullName>
    <active>true</active>
    <description>previewDateTime &lt;= startDateTime</description>
    <errorConditionFormula>PreviewDateTime__c &gt;= StartDateTime__c</errorConditionFormula>
    <errorDisplayField>PreviewDateTime__c</errorDisplayField>
    <errorMessage>PreviewDateTime__c must be earlier than StartDateTime__c</errorMessage>
</ValidationRule>