force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/RegistrationDatesLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>RegistrationDatesLimit</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(RequiredClientRegistration__c, &apos;Mandatory&apos;)
&amp;&amp; 
ClientRegistrationDateLimit__c = True
&amp;&amp; 
(
ISNULL(RegistrationStartDateTime__c) 
				|| ISNULL(RegistrationEndDateTime__c)
)</errorConditionFormula>
    <errorMessage>Limit Client Registration Between Dates’ is set to True . Please add Registration Dates</errorMessage>
</ValidationRule>