force-app/main/default/objects/Brand_Experience_Variation__c/validationRules/RegistrationDateTimeValidity.validationRule-meta.xml
<ValidationRule>
    <fullName>RegistrationDateTimeValidity</fullName>
    <active>true</active>
    <errorConditionFormula>RegistrationStartDateTime__c &gt; RegistrationEndDateTime__c</errorConditionFormula>
    <errorMessage>Registration Start date must be set BEFORE Registration End date. Please modify Registration dates.</errorMessage>
</ValidationRule>